--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -3,3 +3,33 @@
     width: 100%;
   }
 }
+
+@media screen and (max-width: 480px) {
+  .row {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .steps .col,
+  .lessons .col,
+  .why-us .col-right {
+    width: 100%;
+    padding: 2rem;
+  }
+
+  .lesson .col {
+    margin-bottom: 3rem;
+  }
+
+  .steps,
+  .why-us {
+    margin-bottom: 0;
+  }
+
+  .why-us {
+    background: black;
+    padding-top: 3rem;
+  }
+}
+
+
