--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -19,23 +19,25 @@
 
   .steps .col,
   .lessons .col,
-  .why-us .col-right {
+  .why-us .col {
     width: 100%;
-    padding: 2rem;
+    margin-bottom: 50px;
   }
 
-  .lesson .col {
-    margin-bottom: 3rem;
+  .steps .col:last-child,
+  .lessons .col:last-child,
+  .why-us .col:last-child {
+    margin-bottom: 0px;
   }
 
   .steps,
   .why-us {
-    margin-bottom: 0;
+    margin-bottom: 0px;
   }
 
   .why-us {
     background: black;
-    padding-top: 3rem;
+    padding: 3rem 0;
   }
 }
 
